--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -47,11 +47,7 @@
       "minUI5Version": "1.30.0",
       "libs": {
         "sap.ui.core": {},
-				"sap.m": {},
-				"sap.ui.layout": {},
-				"sap.collaboration": {},
-				"sap.ui.comp": {},
-				"sap.uxap": {}
+				"sap.m": {}
       }
     },
     "contentDensities": {
@@ -112,9 +108,5 @@
       "async": true,
       "id": "HomeView"
     }
-  },
-	"sap.platform.hcp": {
-		"uri": "webapp",
-		"_version": "1.1.0"
-	}
+  }
 }
